--- a/responsive/static/css/components/_background.scss
+++ b/responsive/static/css/components/_background.scss
@@ -9,17 +9,9 @@ body {
     margin: 0;
 }
 
-.background {
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
 .atmosphere {
     min-height: 100vh;
+    height: 100%;
     background-image: url(/img/background.svg);
     background-repeat: no-repeat;
     padding-bottom: 4em;
