--- a/responsive/static/css/components/_content.scss
+++ b/responsive/static/css/components/_content.scss
@@ -1,8 +1,18 @@
 section.body {
     width: 100%;
-    padding: 1.3em 0;
+
+    background-color:rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 8.5em;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
 
     @media (min-width: 800px) {
+        position: relative;
+        top: 0;
+        background: none;
         width: 760px;
         padding: 1.3em;
     }
@@ -16,13 +26,12 @@ section.body {
 
 section.content {
     box-sizing: border-box;
-    background-color:rgba(0, 0, 0, 0.5);
     height: 1800px;
-    margin-top: 7.5em;
     padding:1em;
     width: 100%;
     
     @media (min-width: 800px) {
+        background-color:rgba(0, 0, 0, 0.5);
         width:500px;
         margin-top: 0;
         border-left:1px solid #fff;
