--- a/responsive/static/css/components/_sidebar.scss
+++ b/responsive/static/css/components/_sidebar.scss
@@ -7,7 +7,6 @@
     width: 100%;
     opacity: 0;
     z-index: -1;
-    margin-top: 7.5em;
 
     &.open {
         z-index: 10;
